--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "jest": "^29.3.1"
+    "jest": "^29.3.1",
+    "ws": "^8.12.0"
   }
 }
